--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "antd": "^4.16.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -13,8 +14,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "less": "^4.1.1",
     "sass": "^1.35.1",
     "typescript": "^4.3.2",
-    "vite": "^2.3.8"
+    "vite": "^2.3.8",
+    "vite-plugin-imp": "^2.0.7"
   }
 }
