--- a/package.json
+++ b/package.json
@@ -6,13 +6,24 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "antd": "^4.16.6",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "abab": "^2.0.5",
+    "antd": "^4.16.7",
+    "dayjs": "^1.10.6",
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
+    "koa": "^2.13.1",
+    "prettier": "^2.3.2",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "ws": "^7.5.2",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/strophe": "^1.2.32",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "less": "^4.1.1",
     "sass": "^1.35.1",
