--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "abab": "^2.0.5",
-    "antd": "^4.16.7",
+    "antd-mobile": "^2.3.4",
     "dayjs": "^1.10.6",
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
